--- a/app/src/main/res/layout/activity_recoverpassword.xml
+++ b/app/src/main/res/layout/activity_recoverpassword.xml
@@ -195,7 +195,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/baseline_alert_24"
+                    android:src="@drawable/ic_alert"
                     app:tint="@color/red"/>
                 <TextView
                     android:layout_width="wrap_content"
@@ -382,7 +382,7 @@
         android:clickable="true"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         app:tint="?android:attr/iconTint"
-        android:src="@drawable/baseline_arrow_back_24"
+        android:src="@drawable/ic_arrowback"
         android:scaleType="fitXY"
         android:gravity="top"
         android:layout_margin="15dp"/>
