--- a/app/src/main/res/layout/dashboards_layout.xml
+++ b/app/src/main/res/layout/dashboards_layout.xml
@@ -24,7 +24,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_gravity="center"
-            android:src="@drawable/default_image"
+            android:src="@drawable/ic_default"
             tools:src="@drawable/e"/>
 
         <LinearLayout
