--- a/app/src/main/res/layout/dialog_reset_password.xml
+++ b/app/src/main/res/layout/dialog_reset_password.xml
@@ -35,7 +35,7 @@
             android:layout_height="15dp"
             android:contentDescription="error"
             android:scaleType="fitXY"
-            android:src="@drawable/baseline_alert_24"
+            android:src="@drawable/ic_alert"
             app:tint="@color/red"
             android:layout_gravity="start"
             />
