--- a/app/src/main/res/layout/members_layout.xml
+++ b/app/src/main/res/layout/members_layout.xml
@@ -19,7 +19,7 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/default_image"
+            android:src="@drawable/ic_default"
             tools:src="@drawable/r"
             android:clickable="true"
             android:layout_marginStart="10dp"
@@ -83,7 +83,7 @@
             android:layout_height="20dp"
             android:layout_gravity="end|center"
             android:contentDescription="ButtonEditHole"
-            android:src="@drawable/baseline_edit_24"
+            android:src="@drawable/ic_edit"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:focusable="true"
@@ -98,7 +98,7 @@
             android:layout_height="20dp"
             android:layout_gravity="end|center"
             android:contentDescription="ButtonRemoveUser"
-            android:src="@drawable/baseline_close_24"
+            android:src="@drawable/ic_close"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:focusable="true"
@@ -113,7 +113,7 @@
             android:layout_height="20dp"
             android:layout_gravity="end|center"
             android:contentDescription="ButtonRemoveUser"
-            android:src="@drawable/baseline_logout_24"
+            android:src="@drawable/ic_logout"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:clickable="true"
             android:focusable="true"
