--- a/app/src/main/res/layout/users_layout.xml
+++ b/app/src/main/res/layout/users_layout.xml
@@ -17,7 +17,7 @@
             android:id="@+id/imgUser"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:src="@drawable/default_image"
+            android:src="@drawable/ic_default"
             tools:src="@drawable/r"
             android:clickable="true"
             android:layout_marginStart="10dp"
@@ -80,7 +80,7 @@
             android:layout_height="25dp"
             android:layout_gravity="end|center"
             android:contentDescription="ButtonRemoveUser"
-            android:src="@drawable/baseline_invite"
+            android:src="@drawable/ic_invite"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             app:tint="?android:attr/iconTint"
             android:scaleType="fitXY"
