--- a/app/src/main/res/layout/activity_appsetings.xml
+++ b/app/src/main/res/layout/activity_appsetings.xml
@@ -55,7 +55,7 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/arrow"
+                    android:src="@drawable/ic_arrow"
                     android:layout_marginEnd="15dp"
                     app:tint="?android:attr/iconTint"/>
             </LinearLayout>
@@ -80,7 +80,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginStart="22dp"
-                    android:src="@drawable/baseline_edit_24"
+                    android:src="@drawable/ic_edit"
                     app:tint="?android:attr/iconTint"/>
 
                 <TextView
@@ -95,7 +95,7 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/arrow"
+                    android:src="@drawable/ic_arrow"
                     android:layout_marginEnd="15dp"
                     app:tint="?android:attr/iconTint"/>
 
@@ -122,7 +122,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginStart="22dp"
-                    android:src="@drawable/baseline_notifications_24"
+                    android:src="@drawable/ic_notificationfull"
                     app:tint="?android:attr/iconTint"/>
 
                 <TextView
@@ -137,7 +137,7 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/arrow"
+                    android:src="@drawable/ic_arrow"
                     android:layout_marginEnd="15dp"
                     app:tint="?android:attr/iconTint"/>
 
@@ -164,7 +164,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginStart="22dp"
-                    android:src="@drawable/measure"
+                    android:src="@drawable/ic_measure"
                     app:tint="?android:attr/iconTint"/>
 
                 <TextView
@@ -207,7 +207,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginStart="22dp"
-                    android:src="@drawable/baseline_format_terms_24"
+                    android:src="@drawable/ic_terms"
                     app:tint="?android:attr/iconTint"/>
 
                 <TextView
@@ -222,7 +222,7 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/arrow"
+                    android:src="@drawable/ic_arrow"
                     android:layout_marginEnd="15dp"
                     app:tint="?android:attr/iconTint"/>
 
@@ -290,7 +290,7 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_marginStart="22dp"
-                    android:src="@drawable/baseline_info_24"
+                    android:src="@drawable/ic_info"
                     app:tint="?android:attr/iconTint"/>
 
                 <TextView
@@ -305,7 +305,7 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@drawable/arrow"
+                    android:src="@drawable/ic_arrow"
                     android:layout_marginEnd="15dp"
                     app:tint="?android:attr/iconTint"/>
 
@@ -333,7 +333,7 @@
             android:layout_height="25dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="BackButton"
-            android:src="@drawable/baseline_arrow_back_24"
+            android:src="@drawable/ic_arrowback"
             android:scaleType="fitXY"
             app:tint="?android:attr/iconTint"
             android:layout_margin="15dp"
