--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -254,7 +254,7 @@
                         android:layout_width="20dp"
                         android:layout_height="20dp"
                         android:layout_gravity="center"
-                        android:src="@drawable/baseline_info_24"
+                        android:src="@drawable/ic_info"
                         android:clickable="true"
                         android:focusable="true"
                         android:layout_marginStart="5dp"
@@ -426,7 +426,7 @@
             android:id="@+id/btnClose"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:src="@drawable/baseline_close_24"
+            android:src="@drawable/ic_close"
             android:clickable="true"
             android:focusable="true"
             android:layout_margin="15dp"
