--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -22,7 +22,7 @@
             android:layout_height="25dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="BackButton"
-            android:src="@drawable/baseline_arrow_back_24"
+            android:src="@drawable/ic_arrowback"
             android:scaleType="fitXY"
             app:tint="?android:attr/iconTint"
             android:layout_margin="15dp"
