--- a/app/src/main/res/layout/activity_team_goals.xml
+++ b/app/src/main/res/layout/activity_team_goals.xml
@@ -51,7 +51,7 @@
                     android:layout_width="14dp"
                     android:layout_height="14dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/baseline_edit_24"
+                    android:src="@drawable/ic_edit"
                     app:tint="?android:attr/iconTint"
                     android:layout_marginEnd="2dp"/>
 
@@ -168,7 +168,7 @@
                 android:layout_height="25dp"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:contentDescription="BackButton"
-                android:src="@drawable/baseline_arrow_back_24"
+                android:src="@drawable/ic_arrowback"
                 android:scaleType="fitXY"
                 app:tint="?android:attr/iconTint"
                 android:layout_margin="15dp"
