--- a/app/src/main/res/layout/activity_team_members.xml
+++ b/app/src/main/res/layout/activity_team_members.xml
@@ -51,7 +51,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center"
             android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/baseline_member_add"
+            android:src="@drawable/ic_addmember"
             app:tint="?android:attr/iconTint"
             android:layout_marginStart="5dp"
             android:visibility="visible"/>
@@ -104,7 +104,7 @@
                 android:layout_height="25dp"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:contentDescription="BackButton"
-                android:src="@drawable/baseline_arrow_back_24"
+                android:src="@drawable/ic_arrowback"
                 android:scaleType="fitXY"
                 app:tint="?android:attr/iconTint"
                 android:layout_margin="15dp"
