--- a/app/src/main/res/layout/activity_teaminfo.xml
+++ b/app/src/main/res/layout/activity_teaminfo.xml
@@ -22,7 +22,7 @@
         android:id="@+id/imgTeam"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:src="@drawable/default_image"
+        android:src="@drawable/ic_default"
         tools:src="@drawable/e"
         android:visibility="visible"
         android:layout_gravity="center"
@@ -54,7 +54,7 @@
             android:layout_height="25dp"
             android:layout_marginStart="22dp"
             android:contentDescription="Appearance"
-            android:src="@drawable/baseline_info_24"
+            android:src="@drawable/ic_info"
             app:tint="?android:attr/iconTint"/>
 
         <TextView
@@ -69,7 +69,7 @@
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/arrow"
+            android:src="@drawable/ic_arrow"
             android:layout_marginEnd="15dp"
             app:tint="?android:attr/iconTint"/>
     </LinearLayout>
@@ -107,7 +107,7 @@
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/arrow"
+            android:src="@drawable/ic_arrow"
             android:layout_marginEnd="15dp"
             app:tint="?android:attr/iconTint"/>
     </LinearLayout>
@@ -137,7 +137,7 @@
             android:layout_height="25dp"
             android:layout_marginStart="22dp"
             android:contentDescription="Appearance"
-            android:src="@drawable/baseline_people_24"
+            android:src="@drawable/ic_teamsfull"
             app:tint="?android:attr/iconTint"/>
 
         <TextView
@@ -152,7 +152,7 @@
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/arrow"
+            android:src="@drawable/ic_arrow"
             android:layout_marginEnd="15dp"
             app:tint="?android:attr/iconTint"/>
     </LinearLayout>
@@ -174,7 +174,7 @@
             android:layout_height="25dp"
             android:layout_marginStart="22dp"
             android:contentDescription="Appearance"
-            android:src="@drawable/baseline_invite"
+            android:src="@drawable/ic_invite"
             app:tint="?android:attr/iconTint"/>
 
         <TextView
@@ -189,7 +189,7 @@
         <ImageView
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/arrow"
+            android:src="@drawable/ic_arrow"
             android:layout_marginEnd="15dp"
             app:tint="?android:attr/iconTint"/>
     </LinearLayout>
@@ -209,7 +209,7 @@
             android:layout_height="25dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
             android:contentDescription="BackButton"
-            android:src="@drawable/baseline_close_24"
+            android:src="@drawable/ic_close"
             android:scaleType="fitXY"
             app:tint="?android:attr/iconTint"
             android:layout_margin="15dp"
