--- a/app/src/main/res/layout/activity_teaminvite.xml
+++ b/app/src/main/res/layout/activity_teaminvite.xml
@@ -27,7 +27,7 @@
                 android:background="@null"
                 android:gravity="top"
                 android:scaleType="fitXY"
-                android:src="@drawable/baseline_close_24"
+                android:src="@drawable/ic_close"
                 app:tint="?android:attr/iconTint" />
             <LinearLayout
                 android:layout_width="match_parent"
