--- a/app/src/main/res/layout/activity_usersettings.xml
+++ b/app/src/main/res/layout/activity_usersettings.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/imgProfile"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/default_image"
+                android:src="@drawable/ic_default"
                 tools:src="@drawable/e"
                 android:visibility="gone"/>
 
@@ -169,7 +169,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Excluir minha conta"
-            app:icon="@drawable/baseline_delete_24"
+            app:icon="@drawable/ic_delete"
             app:iconSize="20dp"
             app:iconTint="?android:attr/iconTint"
             app:iconPadding="5dp"
@@ -203,7 +203,7 @@
                 android:layout_height="25dp"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:contentDescription="BackButton"
-                android:src="@drawable/baseline_arrow_back_24"
+                android:src="@drawable/ic_arrowback"
                 android:scaleType="fitXY"
                 app:tint="?android:attr/iconTint"
                 android:layout_margin="15dp"
@@ -228,7 +228,7 @@
                 android:layout_height="25dp"
                 android:background="@null"
                 android:contentDescription="EditButton"
-                android:src="@drawable/baseline_edit_24"
+                android:src="@drawable/ic_edit"
                 android:scaleType="fitXY"
                 app:tint="?android:attr/iconTint"
                 android:layout_margin="15dp"
