--- a/app/src/main/res/layout/fragment_edit_team_goals_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_edit_team_goals_bottom_sheet.xml
@@ -28,7 +28,7 @@
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:gravity="top"
                 android:scaleType="fitXY"
-                android:src="@drawable/baseline_close_24"
+                android:src="@drawable/ic_close"
                 app:tint="?android:attr/iconTint" />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -71,7 +71,7 @@
                             android:layout_width="20dp"
                             android:layout_height="20dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/baseline_info_24"
+                            android:src="@drawable/ic_info"
                             android:clickable="true"
                             android:focusable="true"
                             android:layout_marginStart="5dp"
