--- a/app/src/main/res/layout/fragment_teams.xml
+++ b/app/src/main/res/layout/fragment_teams.xml
@@ -33,7 +33,7 @@
                     android:id="@+id/imgAlert"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/baseline_noteam_24"
+                    android:src="@drawable/ic_noteam"
                     android:layout_marginBottom="20dp"
                     app:tint="?android:attr/iconTint"/>
 
@@ -58,7 +58,7 @@
                 android:scaleType="fitXY"
                 app:tint="@color/white"
                 android:background="@drawable/circle_button"
-                android:src="@drawable/baseline_add_24"
+                android:src="@drawable/ic_add"
                 android:layout_gravity="end|bottom"
                 android:layout_marginBottom="25dp"
                 android:layout_marginEnd="20dp"/>
