--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -28,7 +28,7 @@
         android:id="@+id/userPicture"
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:src="@drawable/default_image"
+        android:src="@drawable/ic_default"
         android:layout_gravity="start"
         android:layout_marginBottom="10dp"/>
             <TextView
@@ -67,7 +67,7 @@
         android:id="@+id/btnLogout"
         android:layout_width="35dp"
         android:layout_height="35dp"
-        android:src="@drawable/baseline_logout_24"
+        android:src="@drawable/ic_logout"
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:scaleType="fitXY"
         android:layout_marginTop="10dp"
