--- a/app/src/main/res/layout/notifications_layout.xml
+++ b/app/src/main/res/layout/notifications_layout.xml
@@ -80,7 +80,7 @@
             android:layout_height="25dp"
             android:layout_gravity="end|center"
             android:contentDescription="ButtonRemoveUser"
-            android:src="@drawable/baseline_invite"
+            android:src="@drawable/ic_invite"
             android:background="@color/transparent"
             app:tint="?android:attr/iconTint"
             android:scaleType="fitXY"
