--- a/app/src/main/res/layout/activity_create_team.xml
+++ b/app/src/main/res/layout/activity_create_team.xml
@@ -36,7 +36,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/step_circle_active"
+                    android:background="@drawable/step_active"
                     android:gravity="center"
                     android:text="1"
                     android:textColor="@android:color/white"
@@ -53,7 +53,7 @@
                     android:id="@+id/step2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/step_circle_inactive"
+                    android:background="@drawable/step_inactive"
                     android:gravity="center"
                     android:text="2"
                     android:textColor="@android:color/black"
@@ -118,7 +118,7 @@
             android:layout_height="60dp"
             android:inputType="text"
             android:hint="ex.: Ecosynergy"
-            android:background="@drawable/spinner_background"
+            android:background="@drawable/component_bg"
             android:enabled="true"
             android:textSize="16sp"
             android:paddingStart="15dp"
@@ -141,7 +141,7 @@
             android:layout_height="60dp"
             android:inputType="text"
             android:hint="ex.: @ecosynergyofc"
-            android:background="@drawable/spinner_background"
+            android:background="@drawable/component_bg"
             android:enabled="true"
             android:textSize="16sp"
             android:paddingStart="15dp"
@@ -164,7 +164,7 @@
             android:layout_height="60dp"
             android:inputType="text"
             android:hint="ex.: Setor de emissões de CO2"
-            android:background="@drawable/spinner_background"
+            android:background="@drawable/component_bg"
             android:enabled="true"
             android:textSize="16sp"
             android:paddingStart="15dp"
@@ -187,7 +187,7 @@
             android:layout_height="60dp"
             android:inputType="text"
             android:hint="ex.: (UTC-03:00) Brasilia"
-            android:background="@drawable/spinner_background"
+            android:background="@drawable/component_bg"
             android:enabled="true"
             android:textSize="16sp"
             android:paddingStart="15dp"
@@ -210,7 +210,7 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:spinnerMode="dialog"
-            android:background="@drawable/spinner_background"
+            android:background="@drawable/component_bg"
             android:layout_marginBottom="20dp"/>
 
     </LinearLayout>
@@ -269,7 +269,7 @@
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
                     android:layout_gravity="center"
-                    android:background="@drawable/rounded_background"
+                    android:background="@drawable/ripple_bg"
                     android:focusable="true"
                     android:clickable="true"
                     android:visibility="visible"
@@ -301,7 +301,7 @@
                 android:layout_height="60dp"
                 android:inputType="numberDecimal"
                 android:hint="ex.: 7000"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:textSize="16sp"
                 android:paddingStart="15dp"
                 android:layout_marginBottom="10dp"/>
@@ -320,7 +320,7 @@
                 android:layout_height="60dp"
                 android:inputType="numberDecimal"
                 android:hint="ex.: 49000"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:textSize="16sp"
                 android:paddingStart="15dp"
                 android:layout_marginBottom="10dp"/>
@@ -340,7 +340,7 @@
                 android:layout_height="60dp"
                 android:inputType="numberDecimal"
                 android:hint="ex.: 210000"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:textSize="16sp"
                 android:paddingStart="15dp"
                 android:layout_marginBottom="10dp"/>
@@ -360,7 +360,7 @@
                 android:layout_height="60dp"
                 android:inputType="numberDecimal"
                 android:hint="ex.: 2520000"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:textSize="16sp"
                 android:paddingStart="15dp"
                 android:layout_marginBottom="10dp"/>
