--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -43,7 +43,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/step_circle_active"
+                        android:background="@drawable/step_active"
                         android:gravity="center"
                         android:text="1"
                         android:textColor="@android:color/white"
@@ -59,7 +59,7 @@
                         android:id="@+id/step2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/step_circle_inactive"
+                        android:background="@drawable/step_inactive"
                         android:gravity="center"
                         android:text="2"
                         android:textColor="@android:color/black"
@@ -75,7 +75,7 @@
                         android:id="@+id/step3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/step_circle_inactive"
+                        android:background="@drawable/step_inactive"
                         android:gravity="center"
                         android:text="3"
                         android:textColor="@android:color/black"
@@ -145,7 +145,7 @@
                 android:layout_height="60dp"
                 android:inputType="text"
                 android:hint="ex.: João Gomes"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:enabled="true"
                 android:textSize="16sp"
                 android:paddingStart="15dp"
@@ -167,7 +167,7 @@
                 android:layout_height="60dp"
                 android:inputType="text"
                 android:hint="ex.: joaogomes"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:enabled="true"
                 android:textSize="16sp"
                 android:paddingStart="15dp"
@@ -203,7 +203,7 @@
                 android:layout_height="60dp"
                 android:inputType="textEmailAddress"
                 android:hint="ex.: joaogomes@mail.com"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:enabled="true"
                 android:textSize="16sp"
                 android:paddingStart="15dp"
@@ -240,7 +240,7 @@
                 android:inputType="textNoSuggestions"
                 android:paddingStart="16dp"
                 android:hint="ex.: Brasileiro"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:textSize="16sp"
                 android:layout_marginBottom="5dp"/>
 
@@ -273,7 +273,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:spinnerMode="dropdown"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:layout_marginBottom="5dp"
                 />
 
