--- a/app/src/main/res/layout/activity_appsetings.xml
+++ b/app/src/main/res/layout/activity_appsetings.xml
@@ -40,7 +40,7 @@
                     android:layout_height="25dp"
                     android:layout_marginStart="22dp"
                     android:contentDescription="Appearance"
-                    android:src="@drawable/theme"
+                    android:src="@drawable/ic_theme"
                     app:tint="?android:attr/iconTint"/>
 
                 <TextView
