--- a/app/src/main/res/layout/activity_edit_team.xml
+++ b/app/src/main/res/layout/activity_edit_team.xml
@@ -37,7 +37,7 @@
                 android:layout_height="60dp"
                 android:inputType="text"
                 android:hint="ex.: Ecosynergy"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:textSize="16sp"
                 android:layout_marginBottom="10dp"/>
 
@@ -58,7 +58,7 @@
                 android:layout_height="60dp"
                 android:inputType="text"
                 android:hint="ex.: @ecosynergyofc"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:textSize="16sp"
                 android:layout_marginBottom="10dp"/>
 
@@ -79,7 +79,7 @@
                 android:layout_height="60dp"
                 android:inputType="text"
                 android:hint="ex.: Setor de emissões de CO2"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:textSize="16sp"
                 android:layout_marginBottom="10dp"/>
 
@@ -100,7 +100,7 @@
                 android:layout_height="60dp"
                 android:inputType="textNoSuggestions"
                 android:hint="ex.: (UTC-03:00) Brasilia"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:textSize="16sp"
                 android:layout_marginBottom="10dp"/>
 
@@ -120,7 +120,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:spinnerMode="dialog"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:layout_marginBottom="20dp"/>
         </LinearLayout>
     </ScrollView>
