--- a/app/src/main/res/layout/activity_emailconfirmation.xml
+++ b/app/src/main/res/layout/activity_emailconfirmation.xml
@@ -72,7 +72,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
 
                 <EditText
                     android:id="@+id/digit2"
@@ -89,7 +89,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
 
                 <EditText
                     android:id="@+id/digit3"
@@ -106,7 +106,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
 
                 <EditText
                     android:id="@+id/digit4"
@@ -123,7 +123,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
 
                 <EditText
                     android:id="@+id/digit5"
@@ -140,7 +140,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
 
                 <EditText
                     android:id="@+id/digit6"
@@ -157,7 +157,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
             </LinearLayout>
 
 
