--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -111,7 +111,7 @@
                 android:id="@+id/btnTheme"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:src="@drawable/baseline_sunny_24"
+                android:src="@drawable/ic_light"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:layout_margin="20dp"
                 android:scaleType="fitXY"
