--- a/app/src/main/res/layout/activity_recoverpassword.xml
+++ b/app/src/main/res/layout/activity_recoverpassword.xml
@@ -70,7 +70,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
 
                 <EditText
                     android:id="@+id/digit2"
@@ -87,7 +87,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
 
                 <EditText
                     android:id="@+id/digit3"
@@ -104,7 +104,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
 
                 <EditText
                     android:id="@+id/digit4"
@@ -121,7 +121,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
 
                 <EditText
                     android:id="@+id/digit5"
@@ -138,7 +138,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
 
                 <EditText
                     android:id="@+id/digit6"
@@ -155,7 +155,7 @@
                     android:textStyle="bold"
                     android:textColor="?android:attr/textColorPrimary"
                     tools:ignore="LabelFor"
-                    android:background="@drawable/spinner_background"/>
+                    android:background="@drawable/component_bg"/>
             </LinearLayout>
 
 
