--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -56,7 +56,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/home_background"
+            android:background="@drawable/no_ripple_bg"
             android:orientation="vertical"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
