--- a/app/src/main/res/layout/activity_usersettings.xml
+++ b/app/src/main/res/layout/activity_usersettings.xml
@@ -76,7 +76,7 @@
                 android:inputType="textEmailAddress"
                 android:enabled="false"
                 android:textColor="@color/disabled"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:layout_marginBottom="15dp"/>
 
             <!-- Full Name Label and EditText -->
@@ -98,7 +98,7 @@
                 android:textSize="16sp"
             android:enabled="false"
             android:textColor="@color/disabled"
-            android:background="@drawable/spinner_background"
+            android:background="@drawable/component_bg"
             android:layout_marginBottom="15dp"/>
 
             <TextView
@@ -119,7 +119,7 @@
             android:enabled="false"
                 android:textSize="16sp"
             android:textColor="@color/disabled"
-            android:background="@drawable/spinner_background"
+            android:background="@drawable/component_bg"
             android:layout_marginBottom="15dp"/>
 
             <TextView
@@ -137,7 +137,7 @@
                 android:layout_height="50dp"
                 android:spinnerMode="dialog"
                 android:entries="@array/gender_arrayB"
-                android:background="@drawable/spinner_background"
+                android:background="@drawable/component_bg"
                 android:layout_marginBottom="15dp"/>
 
             <TextView
@@ -159,7 +159,7 @@
             android:textColor="@color/disabled"
             android:textSize="16sp"
             android:paddingStart="15dp"
-            android:background="@drawable/spinner_background"
+            android:background="@drawable/component_bg"
             android:layout_marginBottom="10dp"/>
 
         </LinearLayout>
