--- a/app/src/main/res/layout/dashboards_layout.xml
+++ b/app/src/main/res/layout/dashboards_layout.xml
@@ -6,7 +6,7 @@
     android:layout_width="150dp"
     android:layout_height="120dp"
     android:orientation="vertical"
-    android:background="@drawable/rounded_background"
+    android:background="@drawable/ripple_bg"
     android:layout_marginStart="10dp">
 
     <LinearLayout
