--- a/app/src/main/res/layout/fragment_edit_team_goals_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_edit_team_goals_bottom_sheet.xml
@@ -87,7 +87,7 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:layout_gravity="center"
-                        android:background="@drawable/rounded_background"
+                        android:background="@drawable/ripple_bg"
                         android:focusable="true"
                         android:clickable="true"
                         android:visibility="visible"
@@ -118,7 +118,7 @@
                     android:layout_height="60dp"
                     android:inputType="numberDecimal"
                     android:hint="ex.: 7000"
-                    android:background="@drawable/spinner_background"
+                    android:background="@drawable/component_bg"
                     android:textSize="16sp"
                     android:paddingStart="15dp"
                     android:layout_marginBottom="10dp"/>
@@ -137,7 +137,7 @@
                     android:layout_height="60dp"
                     android:inputType="numberDecimal"
                     android:hint="ex.: 49000"
-                    android:background="@drawable/spinner_background"
+                    android:background="@drawable/component_bg"
                     android:textSize="16sp"
                     android:paddingStart="15dp"
                     android:layout_marginBottom="10dp"/>
@@ -157,7 +157,7 @@
                     android:layout_height="60dp"
                     android:inputType="numberDecimal"
                     android:hint="ex.: 210000"
-                    android:background="@drawable/spinner_background"
+                    android:background="@drawable/component_bg"
                     android:textSize="16sp"
                     android:paddingStart="15dp"
                     android:layout_marginBottom="10dp"/>
@@ -177,7 +177,7 @@
                     android:layout_height="60dp"
                     android:inputType="numberDecimal"
                     android:hint="ex.: 2520000"
-                    android:background="@drawable/spinner_background"
+                    android:background="@drawable/component_bg"
                     android:textSize="16sp"
                     android:paddingStart="15dp"
                     android:layout_marginBottom="10dp"/>
